# customDevFolio

./: .env.example  .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Makefile  README.md  docker-compose.yml
.githooks/: commit-msg  pre-push  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  csv_ndjson.rs  domain.rs  main.rs  prompts.rs  scaffold.rs  slug_util.rs
cli/tests/: cli_smoke.rs
docs/: README.md  multi-portfolio.md  ops.md
docs/adr/: 0001-free-stack.md
examples/import/: README.md  edge_cases.csv  people.csv
scripts/: check-changelog.sh  check.sh  ensure-git-setup.sh  generate_portfolio_csv.py  setup-git.sh
server/: Cargo.toml
server/migrations/: 20260630000001_init.sql
server/src/: csv_convert.rs  db.rs  error.rs  import.rs  lib.rs  models.rs  slug.rs
server/src/auth/: mod.rs
server/src/http/: imports.rs  mod.rs  routes.rs  state.rs
server/src/repos/: accounts.rs  import_jobs.rs  mod.rs  portfolios.rs  sessions.rs  users.rs
server/tests/: repo_integration.rs
template/: README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
template/app/: globals.css  layout.tsx  page.tsx
template/app/dashboard/: page.tsx
template/app/dashboard/[accountId]/: page.tsx
template/app/dashboard/[accountId]/p/[slug]/: page.tsx
template/app/login/: page.tsx
template/app/signup/: page.tsx
template/components/sections/: Achievements.tsx  Blog.tsx  Contact.tsx  Education.tsx  Experience.tsx  Hero.tsx  Projects.tsx  Skills.tsx
template/components/ui/: Badge.tsx  ButtonLink.tsx  Container.tsx  DomainBadge.tsx  Footer.tsx  Header.tsx  SectionHeading.tsx  ThemeScript.tsx  ThemeToggle.tsx
template/content/: portfolio.json
template/content/examples/: backend.json  data.json  devops.json  frontend.json  game.json  general.json  ml.json  mobile.json  security.json
template/lib/: api.ts  domains.test.ts  domains.ts  portfolio.test.ts  portfolio.ts  types.ts  utils.test.ts  utils.ts
