[package]
name = "customfolio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI to scaffold domain-aware Next.js developer portfolios"
readme = "../README.md"
keywords = ["cli", "portfolio", "nextjs", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "customfolio"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
