[package]
name = "customfolio-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres-backed account and portfolio storage for customFolio (free OSS stack)"
readme = "../README.md"
keywords = ["portfolio", "postgres", "sqlx"]
categories = ["database"]

[lib]
name = "customfolio_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
    "derive",
] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
