[package]
name = "customfolio-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres-backed account and portfolio storage for customFolio (free OSS stack)"
readme = "../README.md"
keywords = ["portfolio", "postgres", "sqlx"]
categories = ["database"]

[lib]
name = "customfolio_server"
path = "src/lib.rs"

[[bin]]
name = "customfolio-api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
    "derive",
] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
serde_json = "1"
